[package]
name = "gstreamer"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer/"
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 
build = "build.rs"

[dependencies]
cfg-if = "1.0"
libc = "0.2"
ffi = { package = "gstreamer-sys", path = "sys", version = "0.22" }
glib.workspace = true
num-integer = { version = "0.1", default-features = false, features = [] }
num-rational = { version = "0.4", default-features = false, features = [] }
futures-core = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
muldiv = "1"
opt-ops = { package = "option-operations", version = "0.5" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
paste = "1.0"
thiserror = "1"
smallvec = { version = "1.0", features = ["write"] }
itertools = "0.12"
pin-project-lite = "0.2"
once_cell = "1"

[dev-dependencies]
ron = "0.8"
serde_json = "1.0"
futures-executor = "0.3.1"
gir-format-check = "0.1"

[build-dependencies]
system-deps = "6"

[features]
default = []
v1_16 = ["ffi/v1_16"]
v1_18 = ["ffi/v1_18", "v1_16"]
v1_20 = ["ffi/v1_20", "v1_18"]
v1_22 = ["ffi/v1_22", "v1_20"]
v1_24 = ["ffi/v1_24", "v1_22"]
serde = ["num-rational/serde", "dep:serde", "serde_bytes"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0]
name = "gstreamer-1.0"
version = "1.14"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_16]
version = "1.16"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_18]
version = "1.18"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_18_3]
version = "1.18.3"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_20]
version = "1.20"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_22]
version = "1.22"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_20_4]
version = "1.20.4"

[package.metadata.system-deps.'cfg(target_os = "macos")'.gstreamer_1_0.v1_24]
version = "1.23"
